--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,14 +32,6 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       -
-        name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-      -
         name: Login to DockerHub
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v1 
@@ -59,6 +51,6 @@ jobs:
             ${{ steps.docker_meta.outputs.tags }}
             denizgokcin/petsc4py:latest
           labels: ${{ steps.docker_meta.outputs.labels }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
+          cache-from: type=registry,ref=denizgokcin/petsc4py:latest
+          cache-to: type=inline
 
